updated new mbr startup argument settings

--- a/MyBot.Supporter.V2/MainWindow.xaml
+++ b/MyBot.Supporter.V2/MainWindow.xaml
@@ -65,7 +65,7 @@
                 </TabItem>
                 <TabItem Header="Other Settings">
                     <Grid  Opacity="0.8">
-                        <CheckBox x:Name="mini" Content="Enable Mini" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="White" Background="White" BorderBrush="White"/>
+                        <CheckBox x:Name="mini" Content="Enable Mini" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="White" Background="Lime" BorderBrush="White"/>
                         <Border Width="191" Margin="246,5,0,10" BorderBrush="White" BorderThickness="1" CornerRadius="8,8,8,8">
                             <materialDesign:Card HorizontalAlignment="Center" VerticalAlignment="Top" BorderBrush="White">
                                 <StackPanel x:Name="downloadPanel">
@@ -78,6 +78,8 @@
                                 </StackPanel>
                             </materialDesign:Card>
                         </Border>
+                        <CheckBox x:Name="hideandroid" Content="Hide Android" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Foreground="White" Background="Lime" BorderBrush="White"/>
+                        <CheckBox x:Name="dock" Content="Dock Bot" HorizontalAlignment="Left" Margin="10,56,0,0" VerticalAlignment="Top" Foreground="White" Background="Lime" BorderBrush="White"/>
 
                     </Grid>
                 </TabItem>
